sloupce v profilu a nastaveni

--- a/app/templates/change-password.hbs
+++ b/app/templates/change-password.hbs
@@ -1,4 +1,4 @@
-<section id="forgot-password" class="container content-section" style="margin-bottom:40px; margin-top:20px">
+<section id="forgot-password" class="container content-section" style="margin-bottom:40px; margin-top:20px" align="center">
 	<!-- Sekcia noviniek -->
   <h2>Změna hesla</h2>
   <div class="password-email-container">
