--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -1,8 +1,8 @@
 <section id="profile" class="container content-section" style="text-align:justify">
 	<div class="row">
-		<div class="col-xs-5 col-md-3">
+		<div class="col-sm-12 col-md-3">
 			<div style="margin-top:30px">
-				<img src="{{model.profile_pic}}" style="max-width:250px;"/>
+				<img src="{{model.profile_pic}}" style="width:100%; max-width:250px;"/>
 			</div>
 			<div id="name" style="margin-top:30px; margin-left:5px">
 				<h3>{{model.name}}</h3>
@@ -20,7 +20,7 @@
 			</div>
 		</div>
 		{{#unless model.administrator}}
-		<div class="col-xs-7 col-sm-7 col-md-9">
+		<div class="col-sm-12 col-md-9">
 			<div style="margin-top:30px">
 				<h5>Trofeje</h5>
 				<hr>
@@ -40,15 +40,15 @@
 			</div>
 
 			<div class="row">
-				<div class="col-sm-4">
+				<div class="col-xs-4">
 					<div id="profile-points-text" class="inline">Skóre: </div>
 					<div id="profile-points" class="inline" style="margin-left:10px">{{model.score}}</div>
 				</div>
-				<div class="col-sm-4">
+				<div class="col-xs-4">
 					<div id="profile-points-text" class="inline">Percentil: </div>
 					<div id="profile-points" class="inline" style="margin-left:10px">{{model.percentile}}&nbsp;%</div>
 				</div>
-				<div class="col-sm-4">
+				<div class="col-xs-4">
 					<div id="profile-points-text" class="inline">Ročníky: </div>
 					<div id="profile-points" class="inline" style="margin-left:10px">{{model.seasons}}</div>
 				</div>
@@ -74,14 +74,14 @@
 				<div class="panel" style="box-shadow: none; margin-bottom: -10px;">
 					<div class="panel-body">
 						<div class="row">
-							<div class="col-sm-1"></div>
-							<div class="col-sm-5">
+							<div class="col-xs-1"></div>
+							<div class="col-xs-5">
 								<h5>Název</h5>
 							</div>
-							<div class="col-sm-4">
+							<div class="col-xs-4">
 								<h5>Trofeje</h5>
 							</div>
-							<div class="col-sm-2">
+							<div class="col-xs-2">
 								<h5>Body</h5>
 							</div>
 						</div>
@@ -92,16 +92,16 @@
 				<div class="panel panel-profile-assignment">
 					<div class="panel-body">
 						<div class="row">
-							<div class="col-sm-6">
+							<div class="col-xs-6">
 								<img class="inline" src="{{result.task.pic}}">
 								<label class="inline" style="margin-left:10px">{{#link-to "task" result.task}}{{result.task.title}}{{/link-to}}</label>
 							</div>
-							<div class="col-sm-4">
+							<div class="col-xs-4">
 								{{#each result.achievements as |achievement|}}
 								{{achievement-small model=achievement}}
 								{{/each}}
 							</div>
-							<div class="col-sm-2">
+							<div class="col-xs-2">
 								<h5 style="margin-left: 10px">{{result.score}}</h5>
 							</div>
 						</div>
