--- a/app/templates/achievements.hbs
+++ b/app/templates/achievements.hbs
@@ -1,1 +1,38 @@
-achievementy
+<section id="results" class="container content-section" style="text-align:justify">
+	<!-- Sekcia noviniek -->
+  <h2>Trofeje</h2>
+	<hr>
+  <!-- TODO odomknute trofeje -->
+  <div class="row" style="margin-bottom:10px" align="center">
+    <div class="col-xs-12 col-sm-4 col-md-3"> <!--trofej -->
+      <img src="/img/achievements/achievement-first.svg" width="200px;"/>
+      <p id="profile-text">Popis trofeje.</p>
+    </div>
+
+    <div class="col-xs-12 col-sm-4 col-md-3"> <!--trofej -->
+      <img src="/img/achievements/achievement-second.svg" width="200px;"/>
+      <p id="profile-text">Popis trofeje.</p>
+    </div>
+
+    <div class="col-xs-12 col-sm-4 col-md-3"> <!--trofej -->
+      <img src="/img/achievements/achievement-third.svg" width="200px;"/>
+      <p id="profile-text">Popis trofeje.</p>
+    </div>
+
+    <div class="col-xs-12 col-sm-4 col-md-3"> <!--trofej -->
+      <img src="/img/achievements/achievement-unknown.svg" width="200px;"/>
+      <p id="profile-text">Popis trofeje.</p>
+    </div>
+
+    <div class="col-xs-12 col-sm-4 col-md-3"> <!--trofej -->
+      <img src="/img/achievements/achievement-buldozer.svg" width="200px;"/>
+      <p id="profile-text">Popis trofeje.</p>
+    </div>
+
+    <div class="col-xs-12 col-sm-4 col-md-3"> <!--trofej -->
+      <img src="/img/achievements/achievement-spagety.svg" width="200px;"/>
+      <p id="profile-text">Popis trofeje.</p>
+    </div>
+
+  </div>
+</section>
