Add copy&paste about texts

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -33,7 +33,7 @@
               <img src="img/info-achievement.svg" style="max-width:90%;"/>
             {{/link-to}}
             <p class="about-paragraph" style="font-size:18px;" align="justify">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ac auctor leo. Donec imperdiet euismod dui vel ornare. Nullam nec eros laoreet, hendrerit magna non, auctor nisi. Ut vestibulum dui vel elit tempus, ac volutpat dolor accumsan. Morbi commodo blandit nibh vitae suscipit. Cras nec sapien pellentesque, mollis quam nec, vulputate purus.
+              "Posbírej je všechny!" Během řešení semináře můžeš nejen za překonávání milníků, zajímavá řešení (jak v dobrém, tak špatném slova smyslu) a účast na akcích získat odznáčky. Některé odznáčky jsou vzácné, jiné relativně běžné.
             </p>
           </div>
           <div class="col-xs-12 col-sm-4">
