--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,6 +1,32 @@
 <section class="container content-section" style="margin-bottom:40px; margin-top:50px">
 	<h2 id="about">O KSI</h2>
-	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus augue eu ante sodales lacinia id a dui. Nullam volutpat dapibus lacus, a consequat arcu ornare non. Nulla iaculis interdum felis sed suscipit. Nunc rutrum ex turpis, vel mattis turpis tempor eu. Mauris auctor tempus nulla, ac vehicula nisl. Cras ex elit, tempor quis lacinia id, vehicula in magna. Morbi congue lacinia faucibus. Nunc suscipit tristique metus quis convallis. Fusce a risus ut dui ullamcorper aliquet. Nullam sagittis magna ut justo rhoncus, id feugiat nulla luctus. Vivamus at tincidunt diam. Nunc imperdiet, nulla egestas sollicitudin sodales, quam nunc mattis leo, sit amet volutpat est ante a eros. Aenean euismod tortor dui, non ultrices odio bibendum sed. Vivamus ultrices ex in dolor tempor, a mattis magna euismod. </p>
+	<p>KSI, neboli Korespondenční Seminář z Informatiky, je celoroční soutěž pro středoškoláky z České i Slovenské republiky organizovaná studenty Fakulty Informatiky Masarykovy Univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a procvičit programátorské a matematické myšlení.</p>
+
+	<h3>Jak seminář probíhá?</h3>
+	<p>Každý ročník semináře se skládá z pěti tematických vln. Sada vždy začíná úvodními příklady, ve kterých vás, řešitele, uvedeme do tématu, vysvětlíme základní myšlenky, pojmy a triky. Následují soutěžní úlohy různého charakteru, na jejichž vyřešení a sepsání řešení máte zhruba jeden měsíc. Zatímco nejjednodušší úlohy by po přečtení úvodního povídání neměly dělat problémy ani úplným začátečníkům, nad tou nejtěžší se může zapotit i ostřílený řešitel programátorských soutěží.</p>
+	<p>Zadání zveřejňujeme na našich internetových stránkách a řešitelům je zasíláme i poštou. Odevzdávání úloh a další komunikace pak probíhá přes náš webový systém. Po termínu odevzdání vaše řešení opravíme, obodujeme a okomentujeme. Po vyhodnocení poslední sady úloh jsou nejúspěšnější řešitelé pozváni na týdenní soustředění. Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60 % celkového počtu bodů) jsou zároveň přijati na Fakultu informatiky MU bez přijímacích zkoušek.</p>
+	<p>První ročník semináře proběhl již v roce 2006/2007. Zadání úloh, řešení či výsledkové listiny najdete v sekci Archiv.</p>
+
+	<h3>Jaké úlohy mám očekávat?</h3>
+	<p>Vaším úkolem ve většině úloh bude řešení algoritmického či programátorského problému. Nikdy ale nebudete potřebovat znát nějaký konkrétní programovací jazyk; naopak, někdy vám poskytneme prostředky pro řešení sami - budou i překvapivé nebo netradiční.</p>
+	<p>Některé z našich úloh mohou být složité nebo pracné, i když s dobrým nápadem se většinou dají vyřešit rychle a elegantně. Není třeba vyřešit všechny úlohy sady - pošlete, co vyřešíte, zbytek si po uzavření sady můžete přečíst ve vzorovém řešení. Také není nutné, abyste měli úlohu kompletně dořešenou. I pokud máte jen nějaké nápady co s ní, napište nám je a my vaši snahu určitě oceníme.</p>
+
+	<h3>Proč se účastnit?</h3>
+	<ul>
+	<li>Procvičíte si své schopnosti, logické a abstraktní myšlení. Získáte nové znalosti a naučíte se nové algoritmy běžně používané v každodenní programátorské praxi.</li>
+
+    <li>Naučíte se své myšlenky jasně formulovat a srozumitelně vyjadřovat</li>
+
+    <li>Připravíte se lépe na matematickou olympiádu kategorie P a jiné soutěže. Trénink je základ úspěchu!</li>
+
+    <li>Přiblíží se vám látka vyučovaná na vysokých školách. Budete schopni se lépe rozhodnout, co chcete studovat, a pokud se rozhodnete pro informatiku, získáte mírný náskok na své budoucí spolužáky.</li>
+
+    <li>Budete-li patřit mezi úspěšné řešitele, budete přijati na Fakultu informatiky MU bez přijímacích zkoušek.</li>
+
+    <li>A hlavně, když budete svědomitě řešit, jistě vás nemine odměna v podobě týdenního soustředění.</li>
+
+	</ul>
+
   <h2 id="faq">FAQ</h2>
   <!--<p id="date-text">Publikováno 4.8.2015</p>-->
 
