--- a/app/templates/components/warning-general.hbs
+++ b/app/templates/components/warning-general.hbs
@@ -1,4 +1,4 @@
-<div class="alert alert-danger" role="alert">
+<div class="alert alert-danger {{class}}" role="alert" id={{id}}>
 	<div style="text-align:center">
 	  	<p class="navbar-btn">
 	  		<strong>Chyba: </strong> {{text}}
