--- a/app/templates/task.hbs
+++ b/app/templates/task.hbs
@@ -5,7 +5,7 @@
     <!-- TODO: center name and image -->
     <div class="row" style="margin-top: 15px">
       <img id="org-photo" class="inline" src="{{model.author.profile_picture}}" style="width: 50px">
-      <h4 id="org-name" class="inline" style="color: #39393a">{{model.author.full_name}}</h4>
+      <h4 id="org-name" class="inline" style="color: #39393a">Autor úlohy: {{model.author.full_name}}</h4>
     </div>
     <div class="row" style="margin-top: 20px">
         <nav class="navbar navbar-uloha" role="navigation">
