--- a/app/templates/tasks.hbs
+++ b/app/templates/tasks.hbs
@@ -9,18 +9,18 @@
 				<div id="graph-info-panel" class="panel panel-ksi">
 				  <div class="panel-heading panel-heading-ksi"><h4 align="center">Vysvětlivky</h4></div>
 				  <div class="panel-body">
-						<img src="img/nodes/base/node-green.svg" class="node-info"/> Algoritmické úkoly<br>
-						<img src="img/nodes/base/node-blue.svg" class="node-info"/> Programovací úkoly<br>
-						<img src="img/nodes/base/node-red.svg" class="node-info"/><br>
-						<img src="img/nodes/base/node-orange.svg" class="node-info"/><br>
+						<img src="img/nodes/base/node-green.svg" class="node-info"/>Algoritmické úkoly<br>
+						<img src="img/nodes/base/node-blue.svg" class="node-info"/>Programovací úkoly<br>
+						<img src="img/nodes/base/node-red.svg" class="node-info"/>Speciální úkoly<br>
+						<img src="img/nodes/base/node-orange.svg" class="node-info"/>Teoretické úkoly<br>
 						<img src="img/nodes/base/node-bronze-unknown.svg" class="node-info"/>Úkoly s překvapením<br>
-						zmíchané úkoly<br>
-						<img src="img/nodes/base/node-big-green.svg" class="node-info-big"/>Velké úkoly<br><!--TODO-->
+						<img src="img/nodes/base/node-orange-blue.svg" class="node-info"/>Zmíchané úkoly<br>
+						<img src="img/nodes/base/node-big.svg" class="node-info-big"/>Velké úkoly<br><!--TODO-->
 						<hr>
-						uzamčené úkoly<br>
-						vyřešené úkoly<br>
+						<img src="img/nodes/base/node-locked.svg" class="node-info"/>Uzamčené úkoly<br>
+						<img src="img/nodes/base/node-done.svg" class="node-info"/>Vyřešené úkoly<br>
 						<hr>
-						prerekvizity<!-- TODO -->
+						prerekvizity TODO
 				  </div>
 				</div>
 			</div>
