--- a/app/templates/components/file-module.hbs
+++ b/app/templates/components/file-module.hbs
@@ -1,7 +1,21 @@
+<div class=row>
+	{{{module.description}}}
+</div>
+{{#if general_error}}
+	{{warning-general text=general_error}}
+{{/if}}
 <div class="alert alert-warning" role="alert" style="margin:20px">
 	<!-- TODO color poznamky -->
-	<strong>Poznámka:</strong> odevzdávejte všechny vaše soubory řešení v jediném zip souboru. <!-- TODO odkaz na clanek, ako odevzdavat ukoly -->
+	<strong>Poznámka:</strong> Odevzdat můžete i více různých souborů naráz, stačí je vybrat. <!-- TODO odkaz na clanek, ako odevzdavat ukoly -->
 </div>
 <div style="margin:20px">
-	Soubor k odevzdání: {{input placeholder="Soubor s řešením"}}
+	Soubor k odevzdání: {{solution-file-upload placeholder="Soubor s řešením" valid="valid" invalid="invalid" class="btn-primary" upload_finished="upload_finished" upload_failed="upload_failed" factionReceiver=file_upload}}
+	{{#if files}}
+		Vybrané soubory:
+		<ul>
+			{{#each files as |file|}}
+				<li>{{file}}</li>
+			{{/each}}
+		</ul>
+	{{/if}}
 </div>
