Implement submission overview

--- a/app/templates/task/solution.hbs
+++ b/app/templates/task/solution.hbs
@@ -19,7 +19,7 @@
   <div class="panel panel-ksi" style="margin-top: 10px">
     <div class="panel-heading panel-heading-ksi">Komentář ke tvému řešení:</div>
     <div class="panel-body">
-      {{model.my_score.comment}}
+      {{{model.my_score.comment}}}
     </div>
   </div>
 </div>
