--- a/app/templates/tasks.hbs
+++ b/app/templates/tasks.hbs
@@ -18,7 +18,8 @@
 						<img src="img/nodes/base/node-big.svg" class="node-info-big"/>Velké úkoly<br><!--TODO-->
 						<hr>
 						<img src="img/nodes/base/node-locked.svg" class="node-info"/>Uzamčené úkoly<br>
-						<img src="img/nodes/base/node-done.svg" class="node-info"/>Vyřešené úkoly<br>
+						<img src="img/nodes/base/node-done-icon.svg" class="node-info"/>Opravené úkoly<br>
+						<img src="img/nodes/base/node-correcting-icon.svg" class="node-info"/>Neopravené úkoly<br>
 						<hr>
 						prerekvizity TODO
 				  </div>
