--- a/app/templates/task.hbs
+++ b/app/templates/task.hbs
@@ -11,7 +11,7 @@
     <div class="row" style="margin-top: 20px">
         <nav class="navbar navbar-uloha" role="navigation">
             <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-task-navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -19,7 +19,7 @@
                 </button>
             </div>
             <div class="container-fluid">
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <div class="collapse navbar-collapse" id="bs-task-navbar-collapse">
                     <ul class="nav navbar-nav">
                         {{#link-to "task.assignment" tagName="li"}}<a href="{{view.href}}">Zadání</a>{{/link-to}}
                         {{#link-to "task.submission" tagName="li"}}<a href="{{view.href}}">Odevzdání</a>{{/link-to}}
