max. body pri ulohach

--- a/app/styles/base/typography.scss
+++ b/app/styles/base/typography.scss
@@ -41,6 +41,11 @@ h6 {
   font-size:10px;
 }
 
+.task-points {
+  margin-left: 15px;
+  font-size:medium;
+  color: ksi-color-level('text-dark', 5);
+}
 #profile-text {
   margin-right: 15px;
   margin-left: 7px;
