--- a/app/templates/components/warning-general.hbs
+++ b/app/templates/components/warning-general.hbs
@@ -1,7 +1,7 @@
 <div class="alert alert-danger {{class}}" role="alert" id={{id}}>
 	<div style="text-align:center">
 	  	<p class="navbar-btn">
-	  		<strong>Chyba: </strong> {{text}}
+	  		{{#unless disable_warning}}<strong>Chyba: </strong> {{/unless}} {{text}}
 	     </p>
 	</div>
 </div>
