--- a/app/templates/task.hbs
+++ b/app/templates/task.hbs
@@ -1,4 +1,4 @@
-<section id="novinky" class="container content-section" style="text-align:justify">
+<section class="container content-section" style="text-align:justify">
     <div class="row" style="margin-top: 30px">
         <h2 id="name" style="color: black">{{model.title}}</h2>
     </div>
