--- a/app/templates/components/code-module.hbs
+++ b/app/templates/components/code-module.hbs
@@ -1,29 +1,29 @@
-<div class="controls" style="margin:20px">
-    <div class="row">
+<div class="controls">
+    <div class="row" style="margin-left:0px">
         {{module.description}}
     </div>
     {{#if general_error}}
         {{warning-general text=general_error}}
     {{/if}}
-    <button class="btn btn-primary inline" {{action "toggle_info"}}>{{info_button_text}}</button>
+    <button class="btn btn-primary btn-task inline" style="margin-top:20px" {{action "toggle_info"}}>{{info_button_text}}</button>
     {{#if show_info}}
         {{info-general text="Náš kód se používá blablabalba. Nemůžeš používat blablaba."}}
     {{/if}}
-    <div class="row">
+    <div class="row" style="margin-top:20px; margin-left:0px">
         <label for="threadName">Editor kódu</label>
         {{code-editor content=module.code  id=(construct-id "editor_module" id)}}
     </div>
-    <div class="row">
-        <button class="btn btn-primary inline" {{action "run"}}>Spustit</button>
-        <button class="btn btn-primary inline" {{action "load"}}>Nahrát soubor z disku</button>
-        <button class="btn btn-primary inline" {{action "save"}}>Uložit soubor na disk</button>
-        <button class="btn btn-primary inline" {{action "reset"}}>Obnovit výchozí kód</button>
+    <div class="row" style="margin-top:20px; margin-left:0px">
+        <button class="btn btn-primary btn-task inline" {{action "run"}}>Spustit</button>
+        <button class="btn btn-primary btn-task inline" {{action "load"}}>Nahrát soubor z disku</button>
+        <button class="btn btn-primary btn-task inline" {{action "save"}}>Uložit soubor na disk</button>
+        <button class="btn btn-primary btn-task inline" {{action "reset"}}>Obnovit výchozí kód</button>
         {{input type="file" class="hide" id=(construct-id "load_input" module.id) accept=".py"}}
     </div>
     {{#if script_text_output}}
-        <div class="row">
+        <div class="row" style="margin-top:20px; margin-left:0px">
             <label>Výstup kódu</label>
-            {{textarea class="form-control" style="min-width: 100%" rows="3" readonly="true" value=script_text_output}}
+            {{textarea class="form-control" style="min-width: 100%;" rows="3" readonly="true" value=script_text_output}}
         </div>
     {{/if}}
     {{#if script_graphics_output}}
